// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with color 1`] = `
<div>
  <h6
    class="StyledBaseText-dVBfTO wmaOE"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with default properties 1`] = `
<div>
  <h6
    class="StyledBaseText-dVBfTO dFejDk"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with mixed color 1`] = `
<div>
  <h6
    class="StyledBaseText-dVBfTO dFejDk"
    data-blade-component="heading"
  >
    Supercharge your business with the all‑powerful
     
    <span
      class="StyledBaseText-dVBfTO cBILfT"
      data-blade-component="heading"
    >
      Payment Gateway
    </span>
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "large" 1`] = `
<div>
  <h4
    class="StyledBaseText-dVBfTO eesmDk"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h4>
</div>
`;

exports[`<Heading /> should render Heading with size "medium" 1`] = `
<div>
  <h5
    class="StyledBaseText-dVBfTO ljSxma"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h5>
</div>
`;

exports[`<Heading /> should render Heading with size "small" 1`] = `
<div>
  <h6
    class="StyledBaseText-dVBfTO bsgrdX"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "small" and contrast "high" 1`] = `
<div>
  <h6
    class="StyledBaseText-dVBfTO HcDBX"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with variant "subheading" and weight "bold" 1`] = `
<div>
  <p
    class="StyledBaseText-dVBfTO hcIYgT"
    data-blade-component="heading"
  >
    Get Started With Payment Gateway
  </p>
</div>
`;
